Enforce proper Java version for builds + update readme (#580)