@@ -318,12 +318,32 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.0.0-M3</version>
+        <executions>
+          <execution>
+            <id>enforce-java</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireJavaVersion>
+                  <version>[1.8,12)</version>
+                </requireJavaVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M4</version>
         <configuration>
           <forkCount>4</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>${jacocoArgLine} -Xmx512m --illegal-access=permit -Duser.country=US</argLine>
+          <argLine>${jacocoArgLine} -Xmx512m -Duser.country=US</argLine>
           <rerunFailingTestsCount>3</rerunFailingTestsCount>
           <systemProperties>
             <property>
